Try to fix overflow-y on IOS safari

--- a/components/projects/projectmodal.module.scss
+++ b/components/projects/projectmodal.module.scss
@@ -11,6 +11,7 @@
 
   height: 100%;
   overflow-y: fixed;
+  overflow-y: hidden;
 
   display: flex;
   justify-content: center;
